--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "preact": "^10.13.2",
+    "shopify-buy": "^2.19.0",
     "uelements": "^0.3.1"
   },
   "devDependencies": {
