add memara data

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SHOPIFY_ACESSTOKEN="98025279fad2edf7954a30b8d0d8dac3"
+VITE_SHOPIFY_ACESSTOKEN="2e3bda8bf98d0679415fb27d9138d7f7"
+VITE_STORE_BASE_URL="www.wear-oni.com"
